objects/CIP_History_Account_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Active_Inactive_Values__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revision Yes/No</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_via_Implementions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved via Implementions</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_all_Packages_Contract_Codes_impacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are all Packages/Contract Codes impacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIP_History__c</fullName>
        <label>CIP History</label>
        <referenceTo>Client_Intake_Process_History__c</referenceTo>
        <relationshipLabel>CIP History Description of Requests</relationshipLabel>
        <relationshipName>CIP_History_Description_of_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description_of_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description of Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Desired Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_Change_Impact_Benefit_Booklets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Change Impact Benefit Booklets?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Change_Impact_SBC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Change Impact SBC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revision_Reason1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revision Reason:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revision Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Client_Intake_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy Client Intake Process</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>list_the_packages_suffixes_sections_imp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impacted Packages/Suffixes/Sections:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CIP History Description of Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP_History_Account_Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History Description of Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>